DuPont DevSB/src/objects/Account_Segment__c.object
<CustomObject>
    <description>Segments related to an account</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account-Segments</relationshipLabel>
        <relationshipName>AccountSegment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Use__c</fullName>
        <description>End Use within this Segment</description>
        <label>End Use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>627 Sterile Pkg</fullName>
                </value>
                <value>
                    <fullName>Cleanroom</fullName>
                </value>
                <value>
                    <fullName>Flexible film</fullName>
                </value>
                <value>
                    <fullName>Geotextiles</fullName>
                </value>
                <value>
                    <fullName>Industrial Felts</fullName>
                </value>
                <value>
                    <fullName>Manufacturing / production</fullName>
                </value>
                <value>
                    <fullName>Plastics</fullName>
                </value>
                <value>
                    <fullName>United States Postal</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Markets__c</fullName>
        <description>Key Markets this account participates in</description>
        <label>Key Markets</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ERA Regional Winner</fullName>
                </value>
                <value>
                    <fullName>ERA State Winner</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Line_Description__c</fullName>
        <label>Line Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Segment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main Segment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEC-CPM</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment_Group__c</fullName>
        <label>Segment Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFS-PM</fullName>
                </value>
                <value>
                    <fullName>CPM</fullName>
                </value>
                <value>
                    <fullName>DPP</fullName>
                </value>
                <value>
                    <fullName>DSRB</fullName>
                </value>
                <value>
                    <fullName>E-O&amp;G</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>MTEC PG-EMEA</fullName>
                </value>
                <value>
                    <fullName>NOW</fullName>
                </value>
                <value>
                    <fullName>Qualicon</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>07-Ag Services</fullName>
                </value>
                <value>
                    <fullName>08-Forestry</fullName>
                </value>
                <value>
                    <fullName>09-Fishing,Hunting,Trapping</fullName>
                </value>
                <value>
                    <fullName>10-Metal Mining</fullName>
                </value>
                <value>
                    <fullName>12-(Energy) Coal Mining</fullName>
                </value>
                <value>
                    <fullName>13-(Energy) Oil &amp; Gas  Extraction</fullName>
                </value>
                <value>
                    <fullName>14-Mining&amp; Quarrying of Nonmetallic Minerals, except fuels</fullName>
                </value>
                <value>
                    <fullName>15-(Construction)-Building,Gen Contractors</fullName>
                </value>
                <value>
                    <fullName>16-(Construction)-Heavy, other than Bldg. Construction</fullName>
                </value>
                <value>
                    <fullName>17-(Construction)-Special Trade Contractors</fullName>
                </value>
                <value>
                    <fullName>20-(Mfg)Food &amp; Kindred Products</fullName>
                </value>
                <value>
                    <fullName>23-(Mfg)Apparel &amp; Other Finished Products</fullName>
                </value>
                <value>
                    <fullName>24-(Mfg)Lumber &amp; Wood Products, except Furniture</fullName>
                </value>
                <value>
                    <fullName>26-(Mfg)Paper &amp; Allied Products</fullName>
                </value>
                <value>
                    <fullName>27-(Mfg)Printing, Publishing &amp; Allied Industries</fullName>
                </value>
                <value>
                    <fullName>28-(Mfg)Chemicals &amp; Allied Products</fullName>
                </value>
                <value>
                    <fullName>29-(Energy/Mfg)Petroleum Refining &amp; Related Industries</fullName>
                </value>
                <value>
                    <fullName>30-(Mfg)Rubber &amp; Misc. Plastic Products</fullName>
                </value>
                <value>
                    <fullName>32-(Mfg)Stone, Clay, Glass &amp; Concrete Products</fullName>
                </value>
                <value>
                    <fullName>33-(Mfg)Primary Metals</fullName>
                </value>
                <value>
                    <fullName>34-(Mfg)Fabricated Metal, except machinery &amp; Transp. Equipment</fullName>
                </value>
                <value>
                    <fullName>35-(Mfg)Industrial &amp; Commercial Machinery &amp; Computer Equipment</fullName>
                </value>
                <value>
                    <fullName>36-(Mfg)Electronic &amp; Other Electrical Equip. &amp; Components, except Computer Equipment</fullName>
                </value>
                <value>
                    <fullName>37-(Mfg)Transportation Equipment</fullName>
                </value>
                <value>
                    <fullName>38-(Mfg)Instruments &amp; Related Products</fullName>
                </value>
                <value>
                    <fullName>39-(Mfg)Misc. Manufacturing Industries</fullName>
                </value>
                <value>
                    <fullName>40-(Transp)Railroad Transportation</fullName>
                </value>
                <value>
                    <fullName>41-(Transp)-Transit, Local &amp; suburban passenger</fullName>
                </value>
                <value>
                    <fullName>42-(Transp)-Motor Freight Transportation &amp; Warehousing</fullName>
                </value>
                <value>
                    <fullName>43-United States Postal Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubSegment__c</fullName>
        <description>SubSegment</description>
        <label>SubSegment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I&amp;A Pkg: Pkging -  Industrial Bag (614)</fullName>
                </value>
                <value>
                    <fullName>MedPkg: Sterile Pkg</fullName>
                </value>
                <value>
                    <fullName>Mobile Phones</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Market Segment</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account-Segment</label>
    <nameField>
        <displayFormat>ACPR{YY}{MM}-{0000}</displayFormat>
        <label>Account Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account-Segments</pluralLabel>
    <recordTypes>
        <fullName>DSS_Segment</fullName>
        <active>true</active>
        <description>DSRB Segment</description>
        <label>DSS Segment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>